<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/action_online"
        android:orderInCategory="97"
        android:title="@string/action_online"
    />
    <item
        android:id="@+id/action_away"
        android:orderInCategory="98"
        android:title="@string/action_away"
    />
    <item
        android:id="@+id/action_occupied"
        android:orderInCategory="99"
        android:title="@string/action_occupied"
    />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
    />
    <item
        android:id="@+id/quit"
        android:orderInCategory="101"
        android:title="@string/quitText"
    />
</menu>
