<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@drawable/background2"
        >
    <LinearLayout 
                  android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
            >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="70dp"
            android:text="@string/HostPort"
            android:textColor="#E0DCBD" />

        <EditText
            android:id="@+id/host"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoText="false"
            android:capitalize="none"
            android:minWidth="150dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/jabberFr"
            android:hint=""
            android:textSize="16sp" />

        <EditText
            android:id="@+id/port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoText="false"
            android:capitalize="none"
            android:minWidth="80dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/xmppPort"
            android:hint=""
            android:textSize="16sp" />

    </LinearLayout>
    <LinearLayout 
                  android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
            >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="70dp"
            android:text="@string/Service"
            android:textColor="#E0DCBD" />

        <EditText
            android:id="@+id/service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoText="false"
            android:capitalize="none"
            android:minWidth="250dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:hint=""
            android:text="@string/jabberFr"
            android:textSize="16sp" />

    </LinearLayout>
    <LinearLayout 
                  android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
            >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="70dp"
            android:text="@string/userid"
            android:textColor="#E0DCBD" />

        <EditText
            android:id="@+id/userid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoText="false"
            android:capitalize="none"
            android:minWidth="250dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text=""
            android:hint=""
            android:textSize="16sp" />

    </LinearLayout>
    <LinearLayout 
                  android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
            >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="70dp"
            android:text="@string/password"
            android:textColor="#E0DCBD" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoText="false"
            android:capitalize="none"
            android:minWidth="250dp"
            android:password="true"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text=""
            android:hint=""
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/ok"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/connectBTN"
        android:textColor="#E0DCBD" >

        <requestFocus/>
    </Button>
</LinearLayout>